--- a/pg_10/2020/pg11do03.md
+++ b/pg_10/2020/pg11do03.md
@@ -18,3 +18,43 @@ E as outras:
 - O poder que está nas mãos de pessoas ruins encontra seu limite em pessoas fiéis a Deus. 
 - Para Daniel e seus amigos a verdade era inegociável.
 
+## A prova
+
+- A religião totalitária exige a lealdade das pessoas pela força. Não conquista os corações, mas obriga as consciências. 
+
+- As pessoas se dobram por medo, não por devoção. E a religião do terror,não do amor. 
+
+- Estabelece uma pena para a desobediência: **a morte**.
+
+- Estabelece um método para matar: **a fornalha ardente**. 
+
+- Nabucodonozor institui uma inquisição bárbara, uma adoração compulsória, uma religião opressora. Quando a religião se desvia da verdade, torna-se o braço da intolerância e da truculência.
+
+## A acusação
+
+- A inveja dos caldeus pelos judeus, eles entregaram os amigos de Daniel para ser entregues na fornalha. 
+
+- A fidelidade incondicional não é uma barganha com Deus. Muitas vezes, nossa fidelidade a Deus nos levará à fornalha, à cova dos leões, à prisão, a sermos rejeitados pelo grupo, a sermos despedidos de uma empresa, a sermos rejeitados na escola. Nosso compromisso não é com o sucesso, mas com a fidelidade a Deus.
+
+# PERGUNTA!
+
+## A firmeza
+
+- Nabucodonozor tenta intimidá-los, dizendo que deus nenhum poderia livrá-los de sua mão (versículo 15). Mas eles não tentam defender a reputação de Deus, procuram apenas obedecê-Lo.
+
+- Nem sempre é da vontade de Deus livrar Seus filhos dos padecimentos e da morte. O patriarca Jó, no auge da sua dor gritou: **“Ainda que Deus me mate, eu ainda confiarei nele”.**
+
+- “se vivemos para o Senhor vivemos; se morremos,
+para o Senhor morremos. De sorte que, quer vivamos
+quer morramos, somos do Senhor” (Rm 14.8).
+
+
+# PERGUNTA!
+
+## A liberdade
+
+# Porque Deus não nos livra dos problemas?
+
+- Deus transformou o instrumento de morte em instrumento de livramento (v. 25,27). O fogo os libertou das amarras, e Deus os libertou do fogo. O fogo só queimou as cordas que os prendiam. O fogo os libertou das cordas, e Deus os libertou do fogo.
+
+- livramento no fogo é a estratégia de Deus.
