Adiciona versão quase final

--- a/pg_10/2020/pg11do03.md
+++ b/pg_10/2020/pg11do03.md
@@ -30,13 +30,15 @@ E as outras:
 
 - Nabucodonozor institui uma inquisição bárbara, uma adoração compulsória, uma religião opressora. Quando a religião se desvia da verdade, torna-se o braço da intolerância e da truculência.
 
+# O que podemos fazer para a religião não desviar da verdade?
+
 ## A acusação
 
 - A inveja dos caldeus pelos judeus, eles entregaram os amigos de Daniel para ser entregues na fornalha. 
 
 - A fidelidade incondicional não é uma barganha com Deus. Muitas vezes, nossa fidelidade a Deus nos levará à fornalha, à cova dos leões, à prisão, a sermos rejeitados pelo grupo, a sermos despedidos de uma empresa, a sermos rejeitados na escola. Nosso compromisso não é com o sucesso, mas com a fidelidade a Deus.
 
-# PERGUNTA!
+# Como podemos abrir mão do nosso sucesso pra engrandecer o nome de Deus?
 
 ## A firmeza
 
@@ -58,3 +60,16 @@ quer morramos, somos do Senhor” (Rm 14.8).
 - Deus transformou o instrumento de morte em instrumento de livramento (v. 25,27). O fogo os libertou das amarras, e Deus os libertou do fogo. O fogo só queimou as cordas que os prendiam. O fogo os libertou das cordas, e Deus os libertou do fogo.
 
 - livramento no fogo é a estratégia de Deus.
+
+- O lugar do calor da prova é o mesmo lugar da comunhão íntima com Cristo.
+
+
+## A promoção
+
+# O que significa ter comunhão com Cristo?
+
+- O mesmo Rei que ordenou a morte deles, agora os chamam de servos do Deus Altissímo e os faz prosperar.
+
+- Deus é glorificado, e os servos de Deus promovidos, sempre que a igreja responde às pressões do mundo com uma fidelidade inegociável.
+
+- Quando o quarto Homem nos faz sair da fornalha, até nossos inimigos precisam reconhecer a majestade de Deus e dar glória a Seu nome (v. 28). Deus nos promove quando saímos da fornalha. Saímos dela mais fortes e mais próximos de Deus!
