Adiciona últimas alterações

--- a/MAZE/maze_20do06de2020.md
+++ b/MAZE/maze_20do06de2020.md
@@ -4,16 +4,26 @@
 - ###  Apresentadora: Carolina Marques 
 - ### Palavra: Pr. José Ricardo
 
-
+---
 ## Abertura do MAZE:
 - ### Neemias 8:8-12
 
 ```
-  8 - E leram no livro, na lei de Deus; e declarando, e explicando o sentido, faziam que, lendo, se entendesse.
-  9 - E Neemias, que era o governador, e o sacerdote Esdras, o escriba, e os levitas que ensinavam ao povo, disseram a todo o povo: Este dia é consagrado ao Senhor vosso Deus, então não vos lamenteis, nem choreis. Porque todo o povo chorava, ouvindo as palavras da lei.
-  10 - Disse-lhes mais: Ide, comei as gorduras, e bebei as doçuras, e enviai porções aos que não têm nada preparado para si; porque este dia é consagrado ao nosso Senhor; portanto não vos entristeçais; porque a alegria do Senhor é a vossa força.
-  11 - E os levitas fizeram calar a todo o povo, dizendo: Calai-vos; porque este dia é santo; por isso não vos entristeçais.
-  12 - Então todo o povo se foi a comer, a beber, a enviar porções e a fazer grande regozijo; porque entenderam as palavras que lhes fizeram saber.
+  8 - E leram no livro, na lei de Deus; e declarando, e explicando o 
+  sentido, faziam que, lendo, se entendesse.
+  9 - E Neemias, que era o governador, e o sacerdote Esdras, o escriba, e
+  os levitas que ensinavam ao povo, disseram a todo o povo: Este dia é
+  consagrado ao Senhor vosso Deus, então não vos lamenteis, nem choreis.
+  Porque todo o povo chorava, ouvindo as palavras da lei.
+  10 - Disse-lhes mais: Ide, comei as gorduras, e bebei as doçuras, e
+  enviai porções aos que não têm nada preparado para si; porque este dia é
+  consagrado ao nosso Senhor; portanto não vos entristeçais; porque a
+  alegria do Senhor é a vossa força.
+  11 - E os levitas fizeram calar a todo o povo, dizendo: Calai-vos; porque
+  este dia é santo; por isso não vos entristeçais.
+  12 - Então todo o povo se foi a comer, a beber, a enviar porções e a
+  fazer grande regozijo; porque entenderam as palavras que lhes fizeram
+  saber.
 
 Neemias 8:8-12
 ```
@@ -33,8 +43,10 @@ Neemias 8:8-12
 ## 2. A Alegria da Salvação ( Salmos 30:11-12 )
 
 ```
-  11 - Mudaste o meu pranto em dança, a minha veste de lamento em veste de alegria,
-  12 - para que o meu coração cante louvores a ti e não se cale. Senhor, meu Deus, eu te darei graças para sempre.
+  11 - Mudaste o meu pranto em dança, a minha veste de lamento em veste de
+  alegria,
+  12 - para que o meu coração cante louvores a ti e não se cale. Senhor,
+  meu Deus, eu te darei graças para sempre.
 
   Salmos 30:11-12
 ```
@@ -44,24 +56,29 @@ Neemias 8:8-12
   - O pecado traz sofrimento, dor e tristeza. É normal ficarmos tristes quando nos arrependemos, mas Deus nos oferece o perdão, por meio de Jesus Cristo, e nos consola.
 
 ```
-  16 - E eu rogarei ao Pai, e ele vos dará outro Consolador, para que fique convosco para sempre;
+  16 - E eu rogarei ao Pai, e ele vos dará outro Consolador, para que fique
+  convosco para sempre;
 
   João 14:16
 
-  26 - Mas aquele Consolador, o Espírito Santo, que o Pai enviará em meu nome, esse vos ensinará todas as coisas, e vos fará lembrar de tudo quanto vos tenho dito.
+  26 - Mas aquele Consolador, o Espírito Santo, que o Pai enviará em meu
+  nome, esse vos ensinará todas as coisas, e vos fará lembrar de tudo
+  quanto vos tenho dito.
 
   João 14:26
 ```
 
   - A salvação é uma alegria Eterna. Todos temos tempos difíceis, mas nós temos a promessa de que a trsiteza vai passar  e a Alegria de Deus vai nos renovar. Até que chegará um dia que não haverá mais tristeza, a Alegria vai permanecer.
 
-
+---
 ## 3. A Alegria nos fortalece
 
   - A Alegria de Deus nos fortalece. A alegria do mundo nos esgota, ás vezes, nos deixam cansados e exaustos. Mas A Alegria de Deus é uma bênção!
 
 ```
-  13 - Que o Deus da esperança os encha de toda alegria e paz, por sua confiança nele, para que vocês transbordem de esperança, pelo poder do Espírito Santo.
+  13 - Que o Deus da esperança os encha de toda alegria e paz, por sua
+  confiança nele, para que vocês transbordem de esperança, pelo poder do
+  Espírito Santo.
 
   Romanos 15:13
 ```
@@ -69,7 +86,9 @@ Neemias 8:8-12
   - A alegria também nos ensina a ser gratos.
 
 ```
-  22 - Assim acontece com vocês: agora é hora de tristeza para vocês, mas eu os verei outra vez, e vocês se alegrarão, e ninguém tirará essa alegria de vocês.
+  22 - Assim acontece com vocês: agora é hora de tristeza para vocês, mas
+  eu os verei outra vez, e vocês se alegrarão, e ninguém tirará essa
+  alegria de vocês.
 
   João 16:22
 ```
